fix wrap style, fix bug in addToCheckedList function

--- a/src/scss/blocks/todo-item.scss
+++ b/src/scss/blocks/todo-item.scss
@@ -16,7 +16,7 @@
     &__text {
         font-size: 1.2rem;
         color: $blue;
-        width: 400px;
+        width: 90%;
         overflow: hidden;
         cursor: pointer;
     }
