--- a/src/scss/blocks/todo.scss
+++ b/src/scss/blocks/todo.scss
@@ -1,4 +1,6 @@
 .todo {
     display: flex;
     justify-content: center;
+    padding-left: 45px;
+    padding-right: 45px;
 }
